--- a/docs/bibliography/identity.bib
+++ b/docs/bibliography/identity.bib
@@ -1,4 +1,14 @@
 
+@misc{munyua_kenya_nodate,
+	title = {Kenya {Government} mandates {DNA}-linked national {ID}, without data protection law},
+	url = {https://blog.mozilla.org/netpolicy/2019/02/08/kenya-government-mandates-dna-linked-national-id-without-data-protection-law},
+	abstract = {Last month, the Kenya Parliament passed a seriously concerning amendment to the country’s national ID law, making Kenya home to the most privacy-invasive national ID system in the world. The ...},
+	language = {en-US},
+	urldate = {2019-02-22},
+	journal = {Open Policy \& Advocacy},
+	author = {Munyua, Alice}
+}
+
 @misc{privacy_and_consumer_advisory_group_identity_2015,
 	title = {Identity {Assurance} {Principles}},
 	url = {https://www.gov.uk/government/publications/govuk-verify-identity-assurance-principles/identity-assurance-principles},
@@ -10,14 +20,13 @@
 	year = {2015}
 }
 
-@article{the_economist_establishing_2018,
+@article{noauthor_establishing_2018,
 	title = {Establishing identity is a vital, risky and changing business},
 	issn = {0013-0613},
 	url = {https://www.economist.com/christmas-specials/2018/12/18/establishing-identity-is-a-vital-risky-and-changing-business},
 	abstract = {A state monopoly on people’s official identities may be weakening},
 	urldate = {2019-02-22},
 	journal = {The Economist},
-	author = {The Economist},
 	month = dec,
 	year = {2018}
 }
