--- a/bibliography/identity.bib
+++ b/bibliography/identity.bib
@@ -1,4 +1,30 @@
 
+@misc{chima_national_2018,
+	title = {National digital identity programmes: what's next?},
+	shorttitle = {National digital identity programmes},
+	url = {https://www.accessnow.org/national-digital-identity-programmes-whats-next/},
+	abstract = {Our working paper on national digital ID programmes explores the human rights implications and provides lawmakers globally with policy recommendations in the areas of governance, privacy and data protection, and cybersecurity.},
+	language = {en},
+	urldate = {2019-03-10},
+	journal = {Access Now},
+	author = {Chima, Raman Jit Singh and Ben-Hassine, Wafa and Aggarwal, Naman M.},
+	month = mar,
+	year = {2018}
+}
+
+@misc{rahman_digital_2018,
+	title = {Digital {ID}: why it matters, and what we're doing about it},
+	shorttitle = {Digital {ID}},
+	url = {https://www.theengineroom.org/digital-id-why-it-matters/},
+	abstract = {We believe it’s crucial to increase the diversity of voices involved in the digital ID discourse – so we’ll be working on this over the coming year, thanks to support from Open Society Foundations, Omidyar Network, and Yoti Foundation.},
+	language = {en-GB},
+	urldate = {2019-03-10},
+	journal = {The Engine Room},
+	author = {Rahman, Zara},
+	month = sep,
+	year = {2018}
+}
+
 @misc{munyua_kenya_nodate,
 	title = {Kenya {Government} mandates {DNA}-linked national {ID}, without data protection law},
 	url = {https://blog.mozilla.org/netpolicy/2019/02/08/kenya-government-mandates-dna-linked-national-id-without-data-protection-law},
