--- a/bibliography/intro-gaap.bib
+++ b/bibliography/intro-gaap.bib
@@ -1,4 +1,14 @@
 
+@misc{adewunmi_making_nodate,
+	title = {Making data a public asset through infrastructure - {Government} {Digital} {Service}},
+	url = {https://gds.blog.gov.uk/2015/11/03/making-data-a-public-asset-through-infrastructure/},
+	abstract = {GDS is leading the digital transformation of the UK government.},
+	language = {en},
+	urldate = {2019-03-10},
+	journal = {Government Digital Service Blog},
+	author = {Adewunmi, Ade}
+}
+
 @misc{open_data_institute_data_2018,
 	title = {Data is infrastructure},
 	url = {https://m.youtube.com/watch?v=nH_phH_RvJ4},
