--- a/docs/bibliography/history.bib
+++ b/docs/bibliography/history.bib
@@ -1,4 +1,11 @@
 
+@misc{noauthor_interstate_nodate,
+	title = {Interstate {Highway} {System} - {Wikipedia}},
+	url = {https://en.wikipedia.org/wiki/Interstate_Highway_System},
+	language = {en},
+	urldate = {2019-03-10}
+}
+
 @book{levinson_box:_2008,
 	address = {Princeton, NJ},
 	title = {The {Box}: {How} the {Shipping} {Container} {Made} the {World} {Smaller} and the {World} {Economy} {Bigger}},
