--- a/bibliography/history.bib
+++ b/bibliography/history.bib
@@ -1,9 +1,10 @@
 
 @misc{noauthor_interstate_nodate,
-	title = {Interstate {Highway} {System} - {Wikipedia}},
+	title = {Interstate {Highway} {System}},
 	url = {https://en.wikipedia.org/wiki/Interstate_Highway_System},
 	language = {en},
-	urldate = {2019-03-10}
+	urldate = {2019-03-10},
+	journal = {Wikipedia}
 }
 
 @book{levinson_box:_2008,
