--- a/docs/bibliography/intro-gaap.bib
+++ b/docs/bibliography/intro-gaap.bib
@@ -1,4 +1,12 @@
 
+@article{oreilly_government_2010,
+	title = {Government as a {Platform}},
+	volume = {6},
+	number = {1},
+	author = {O’Reilly, Tim},
+	year = {2010}
+}
+
 @misc{adewunmi_making_nodate,
 	title = {Making data a public asset through infrastructure - {Government} {Digital} {Service}},
 	url = {https://gds.blog.gov.uk/2015/11/03/making-data-a-public-asset-through-infrastructure/},
